
2009-06-08 (dazjorz)
 * Implemented flags in database for 'email also sent to user' and 'status
 changed to foo' etc:
   - Added userNotified, statusChangedTo, resolutionchangedTo to database.
   - Changed the way these flags are displayed to the user in comment.php;
   using the remarkDeatils style.
   - Made the sent e-mails a bit smarter to display the values outside of the
   quoted remark message.
   - Added part to upgrade script to convert old remarks to the newer format.
 * Fixed upgrade script to actually allow upgrades.
 * Changed resolutions to be stored as their printable strings, instead of
 their ID's.
 * Made iconForResolution and messageForResolution not mind if they receive
 the resolution id or printable string.
 * Fixed comment.php not to save Status was changed when only Resolution was
 changed (Status stays at Closed for those changes)
 * Added view.php to insert a list of <a name> tags for all comment ID's not
 in the list, to allow the browser to go back to the same position when a
 comment is removed from the list.
 * Implemented bug triaging to Trac, including signals from Trac back to
 Likeback to close a comment:
 	 - Added Triaged status and icon, etc.
	 - Added tracbug and tracbugChangedTo columns to the database.
	 - Gave comment.php support for the Triaged status, with its quirks, along
	 with comment.tpl and remarks.tpl.
	 - Added new templates for e-mails sent out when the integration service
	 changes anything.
	 - Added a script, requested by the Trac plugin, which sends out the
	 e-mails and does the modifications.
	 - Added trac plugin which sends a signal to LikeBack when a ticket is
	 changed.
 * Gave the bug status changing system a do-over, there are now several
 options to choose from:
 	 - Added the choice options to newremark.tpl, newremark_closedmutations.tpl,
	 and newremark_openmutations.tpl.
	 - Modified comment.php to work according to the new system.