@@ -4,8 +4,7 @@ A user sent a new comment via LikeBack:
 
 > Version: {$fullVersion}
 > Locale:  {$locale}
-> Window:  {$window}
-> Context: {$context}
+{"Window:  ".$window|wrapQuote}{* window may be quite long and therefore wrap over lines*}
 > Type:    {$type}
 > Comment:
 {$comment|wrapQuote}
